--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "noEmit": true,
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
@@ -21,6 +22,9 @@
     "paths": {
       "@/*": ["./src/*"]
     }
+  },
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
