--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
   "rules": {
     "@typescript-eslint/no-explicit-any": "off"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "ecosystem.config.js"],
   "exclude": ["node_modules"]
 }
