--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.456.0",
+    "mongoose": "^8.8.4",
     "my-hr-expert": "file:",
     "next": "15.0.3",
     "nodemailer": "^6.9.16",
